# web-cellar

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  package.json  turbo.json
apps/backend/: .env.example  Dockerfile  Dockerfile.dev  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 001_initial_schema.py  002_addresses_cart.py  003_orders.py  004_product_extensions_reviews.py
apps/backend/scripts/: seed_products.py  seed_users.py
apps/backend/src/: config.py  database.py  main.py
apps/backend/src/addresses/: __init__.py  dependencies.py  models.py  router.py  schemas.py  service.py
apps/backend/src/admin/: __init__.py  dashboard.py  schemas.py  service.py  settings.py
apps/backend/src/auth/: admin_router.py  dependencies.py  models.py  router.py  schemas.py  security.py  service.py
apps/backend/src/cart/: __init__.py  dependencies.py  models.py  router.py  schemas.py  service.py
apps/backend/src/health/: router.py
apps/backend/src/orders/: __init__.py  admin_router.py  dependencies.py  models.py  router.py  schemas.py  service.py
apps/backend/src/products/: __init__.py  admin_router.py  models.py  router.py  schemas.py  service.py
apps/backend/src/promo/: __init__.py  models.py  router.py  schemas.py
apps/backend/src/reviews/: __init__.py  admin_router.py  dependencies.py  models.py  router.py  schemas.py  service.py
apps/backend/src/services/: __init__.py
apps/backend/tests/: conftest.py  test_auth.py  test_health.py
apps/frontend/: .env.example  Dockerfile  (+9 more)
(+149 files in other folders)
